tests/fixtures/valid/closures.ko
// Closures with variable capture.

module closures_fixture {
    meta {
        purpose: "Test closure expressions and variable capture"
        version: "0.1.0"
    }

    fn main() -> Int {
        let factor: Int = 10
        let mul: (Int) -> Int = |x: Int| -> Int { x * factor }

        let a: Int = mul(3)
        let b: Int = mul(7)

        print_int(a)
        print_int(b)
        return 0
    }
}
